# TrajLens

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  dev_install.sh  install.sh  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
dev_utils/: cross_reference.py  graph_similarity.py  install-hooks.sh  render_mermaid.py  render_reactflow.py  screenshot.py
docs/: compiler_features.md  config.md  parser_architecture.md  project_architecture.md  project_specification.md  python_wrapper.md  universal_parser.md
docs/graphs/: activity_graph.md  cost_map.md  goal_tree.md  reasoning_dag.md
docs/llm/: bedrock.md  overview.md
parsers/: README.md
skills/: analyze.md
trajlens/: Cargo.toml
trajlens-py/: README.md
trajlens-py/tests/: test_trajlens.py
trajlens-py/trajlens/: __init__.py
trajlens-py/trajlens/rendering/: svg_renderer.py
trajlens-web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
trajlens-web/src/: App.tsx  igr-loader.ts  index.ts  layout.ts  types.ts
trajlens-web/src/components/: ActivityGraphView.tsx  CostMapView.tsx  DetailPanel.tsx  GoalTreeView.tsx  ReasoningDAGView.tsx  TrajLensViewer.tsx
trajlens-web/src/components/nodes/: ActivityContainer.tsx  ActivityNode.tsx  GoalNode.tsx  JunctionNode.tsx  ReasoningNode.tsx
trajlens/src/: config.rs  error.rs  igr.rs  lib.rs  models.rs  python.rs  wasm.rs
trajlens/src/compilers/: README.md  layout.rs  mod.rs  text_tree.rs  traits.rs
trajlens/src/compilers/mermaid/: mod.rs
trajlens/src/compilers/neo4j/: mod.rs
trajlens/src/compilers/reactflow/: mod.rs
trajlens/src/compilers/svg_mermaid/: mod.rs
trajlens/src/compilers/svg_python/: mod.rs
trajlens/src/compilers/svg_rust/: activity_graph.rs  cost_map.rs  goal_tree.rs  mod.rs  reasoning_dag.rs
trajlens/src/graphs/: activity_graph.rs  cost_map.rs  goal_tree.rs  mod.rs  reasoning_dag.rs
trajlens/src/llm/: anthropic.rs  bedrock.rs  mod.rs  model_registry.rs  traits.rs
trajlens/src/parsing/: cost_estimator.rs  llm_semantic_processor.rs  mod.rs  parser_agents.rs  parser_config.rs  parser_generator.rs  parser_registry.rs  script_runner.rs
trajlens/tests/: test_boundaries.rs  test_builders.rs  test_igr.rs  test_parsers.rs  test_render.rs
