[workspace]
members = ["trajlens"]
exclude = ["trajlens-web"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
insta = { version = "1", features = ["json", "toml"] }
# LLM clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
