[package]
name = "trajlens"
version = "0.1.0"
edition = "2021"
description = "Transform agent execution logs into structured multi-graph visualizations"
license = "MIT"
repository = "https://github.com/user/TrajLens"

[lib]
name = "trajlens"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "trajlens"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
treemap = { version = "0.3", optional = true }
# CLI dependencies
clap = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }
glob = { version = "0.3", optional = true }
# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
tempfile = { version = "3", optional = true }
# Sandboxing
nono = { version = "0.62", optional = true }
# LLM dependencies
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = ["cli", "svg-rust"]
cli = ["clap", "anyhow", "glob", "nono"]
wasm = ["wasm-bindgen"]
python = ["pyo3", "svg-rust", "tempfile"]
# LLM providers
llm = ["async-trait", "tokio", "tokio/rt-multi-thread"]
llm-anthropic = ["llm", "reqwest"]
llm-bedrock = ["llm", "aws-config", "aws-sdk-bedrockruntime"]
all-llm = ["llm-anthropic", "llm-bedrock"]
# Renderers
svg-rust = ["treemap"]          # SVG via pure Rust layout + string assembly
svg-python = []        # SVG via Python subprocess
svg-mermaid = ["mermaid"]  # SVG via mermaid-cli (mmdc)
mermaid = []           # Mermaid.js diagram text (.mmd)
reactflow = []         # React Flow JSON (positioned nodes/edges)
neo4j = []             # Neo4j Cypher statements
all-compilers = ["svg-rust", "svg-python", "svg-mermaid", "mermaid", "reactflow", "neo4j"]
